--- a/tutorials/01-quickstart.ipynb
+++ b/tutorials/01-quickstart.ipynb
@@ -32,21 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "example_scans/temp_file.zip: 100%|██████████| 2.47M/2.47M [00:00<00:00, 80.1MiB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading weights...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "example_scans/temp_file.zip: 100%|██████████| 2.47M/2.47M [00:00<00:00, 16.5MiB/s]\n",
       "/users/rhydian/spinenet-v2-opensource/spinenet/io/download.py:64: UserWarning: /users/rhydian/spinenet-v2-opensource/spinenet/weights/grading/ckpt1.pt already exists. Skipping download.\n",
       "  warnings.warn('{} already exists. Skipping download.'.format(fname))\n",
       "/users/rhydian/anaconda3/envs/default_env/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and will be removed in 0.15, please use 'weights' instead.\n",
@@ -59,6 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading weights...\n",
       "Loading Detection Model...\n",
       "==> Loading model trained for 436 epochs...\n",
       "Loading Appearance Model...\n",
@@ -172,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +435,7 @@
        "L5-L5                        0                       0           0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,6 +449,13 @@
     "ivd_grades = spnt.grade_ivds(ivd_dicts)\n",
     "ivd_grades.head(len(ivd_dicts))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -480,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
