--- a/tutorials/02-in-depth-detection-and-grading.ipynb
+++ b/tutorials/02-in-depth-detection-and-grading.ipynb
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "example_scans/temp_file.zip: 100%|██████████| 1.60M/1.60M [00:00<00:00, 62.8MiB/s]\n",
+      "example_scans/temp_file.zip: 100%|██████████| 1.60M/1.60M [00:00<00:00, 15.8MiB/s]\n",
       "/users/rhydian/anaconda3/envs/default_env/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and will be removed in 0.15, please use 'weights' instead.\n",
       "  warnings.warn(\n",
       "/users/rhydian/anaconda3/envs/default_env/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and will be removed in 0.15. The current behavior is equivalent to passing `weights=None`.\n",
@@ -238,6 +238,13 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C2', 'C3', 'C4', 'C5', 'C6', 'C7', 'T1', 'T2', 'T3', 'T4', 'T5', 'T6', 'T7', 'T8', 'T9', 'T10', 'T11', 'T12', 'L1', 'L2', 'L3', 'L4', 'L5', 'L5']\n"
+     ]
     }
    ],
    "source": [
@@ -260,7 +267,9 @@
     "\n",
     "plt.axis('off')\n",
     "plt.title('Detected Vertebrae (Mid Sagittal Slice)')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print([x['predicted_label'] for x in vert_dicts])"
    ]
   },
   {
