update tutorial to show correct results after fixed eval mode bug (previous commit)

--- a/tutorials/01-quickstart.ipynb
+++ b/tutorials/01-quickstart.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "./example_scans/temp_file.zip: 100%|██████████| 2.47M/2.47M [00:00<00:00, 16.1MiB/s]\n"
+      "./example_scans/temp_file.zip: 100%|██████████| 2.47M/2.47M [00:00<00:00, 17.0MiB/s]\n",
+      "/users/rhydian/spinenet-v2-opensource/spinenet/io/download.py:64: UserWarning: /users/rhydian/spinenet-v2-opensource/spinenet/weights/grading/ckpt1.pt already exists. Skipping download.\n",
+      "  warnings.warn('{} already exists. Skipping download.'.format(fname))\n",
+      "/users/rhydian/anaconda3/envs/default_env/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and will be removed in 0.15, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/users/rhydian/anaconda3/envs/default_env/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and will be removed in 0.15. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
      ]
     },
     {
@@ -107,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +340,7 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -344,11 +350,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>L2-L3</th>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -358,7 +364,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>L3-L4</th>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -368,11 +374,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>L4-L5</th>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -386,8 +392,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>L5-S1</th>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -407,16 +413,16 @@
        "T11-T12          1          1                     1                  0   \n",
        "T12-L1           2          1                     1                  0   \n",
        "L1-L2            3          1                     1                  0   \n",
-       "L2-L3            3          2                     1                  0   \n",
-       "L3-L4            3          2                     1                  0   \n",
-       "L4-L5            3          2                     1                  0   \n",
-       "L5-S1            3          1                     1                  0   \n",
+       "L2-L3            4          3                     1                  0   \n",
+       "L3-L4            4          2                     1                  0   \n",
+       "L4-L5            4          2                     1                  0   \n",
+       "L5-S1            2          3                     1                  0   \n",
        "\n",
        "         UpperEndplateDefect  LowerEndplateDefect  UpperMarrow  LowerMarrow  \\\n",
        "T11-T12                    0                    0            0            0   \n",
        "T12-L1                     0                    0            0            0   \n",
-       "L1-L2                      0                    0            0            0   \n",
-       "L2-L3                      0                    0            0            0   \n",
+       "L1-L2                      1                    0            0            0   \n",
+       "L2-L3                      1                    0            0            0   \n",
        "L3-L4                      0                    0            0            0   \n",
        "L4-L5                      0                    0            0            0   \n",
        "L5-S1                      0                    0            0            0   \n",
@@ -426,12 +432,12 @@
        "T12-L1                       0                       0           0  \n",
        "L1-L2                        0                       0           0  \n",
        "L2-L3                        0                       0           0  \n",
-       "L3-L4                        0                       0           0  \n",
+       "L3-L4                        0                       0           1  \n",
        "L4-L5                        0                       0           0  \n",
        "L5-S1                        0                       0           0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +464,7 @@
     "\n",
     "from spinenet.io import save_grading_results_to_csv\n",
     "\n",
-    "save_grading_results_to_csv(ivd_grades, f\"{results_folder}/{scan_name}_ivd_grades.csv\")"
+    "save_grading_results_to_csv(ivd_grades, f\"{results_folder}/{scan_name}_ivd_grades.csv\")\n"
    ]
   }
  ],
