Update tutorials to reflect new spinenet.io API
Changed the tutorial notebooks to use the new io API.
Namely, changes load_dicom_from_folder to load_dicoms_from_folder

--- a/tutorials/02-whole-spine-detection.ipynb
+++ b/tutorials/02-whole-spine-detection.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "import spinenet\n",
     "from spinenet import SpineNet, download_example_scan\n",
-    "from spinenet.io import load_dicom_from_folder\n",
+    "from spinenet.io import load_dicoms_from_folder\n",
     "\n",
     "\n",
     "\n",
@@ -105,7 +105,7 @@
     "\n",
     "# loads in a dicom from the example scan folder.\n",
     "# if set, the `require_extensions` flag requires that files end with `.dcm`\n",
-    "scan = load_dicom_from_folder(example_scan_folder, require_extensions=False, metadata_overwrites=overwrite_dict)\n"
+    "scan = load_dicoms_from_folder(example_scan_folder, require_extensions=False, metadata_overwrites=overwrite_dict)\n"
    ]
   },
   {
