--- a/tutorials/01-quickstart.ipynb
+++ b/tutorials/01-quickstart.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "import spinenet\n",
     "from spinenet import SpineNet, download_example_scan\n",
-    "from spinenet.io import load_dicom_from_folder\n",
+    "from spinenet.io import load_dicoms_from_folder\n",
     "\n",
     "# download example scans \n",
     "os.makedirs('example_scans', exist_ok=True)\n",
@@ -99,7 +99,7 @@
     "\n",
     "# loads in a dicom from the example scan folder.\n",
     "# if set, the `require_extensions` flag requires that files end with `.dcm`\n",
-    "scan = load_dicom_from_folder(f\"{example_scan_folder}/{scan_name}\", require_extensions=False, metadata_overwrites=overwrite_dict)\n"
+    "scan = load_dicoms_from_folder(f\"{example_scan_folder}/{scan_name}\", require_extensions=False, metadata_overwrites=overwrite_dict)\n"
    ]
   },
   {
