Remove superfluous function for saving gradings
It's already a pd.DataFrame so doesn't need a function for this.

--- a/tutorials/01-quickstart.ipynb
+++ b/tutorials/01-quickstart.ipynb
@@ -462,9 +462,7 @@
     "results_folder = './results'\n",
     "os.makedirs(results_folder, exist_ok=True)\n",
     "\n",
-    "from spinenet.io import save_grading_results_to_csv\n",
-    "\n",
-    "save_grading_results_to_csv(ivd_grades, f\"{results_folder}/{scan_name}_ivd_grades.csv\")\n"
+    "ivd_grades.to_csv(f\"{results_folder}/{scan_name}_ivd_grades.csv\")\n"
    ]
   }
  ],
